--- a/Doxyfile.txt.in
+++ b/Doxyfile.txt.in
@@ -4,9 +4,9 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
-PROJECT_NAME           = FileTools
-PROJECT_NUMBER         = 
-PROJECT_BRIEF          = FileTools
+PROJECT_NAME           = ${Docs_ProjectName}
+PROJECT_NUMBER         = ${Docs_ProjectVersion}
+PROJECT_BRIEF          = ${Docs_ProjectName}
 PROJECT_LOGO           = 
 OUTPUT_DIRECTORY       = "${CMAKE_SOURCE_DIR}"
 CREATE_SUBDIRS         = NO
@@ -112,42 +112,17 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = "${CMAKE_SOURCE_DIR}/File/" \
-                         "${CMAKE_SOURCE_DIR}/Readme.md"
+INPUT                  = ${Docs_SourceLocation}
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.cpp \
                          *.h \
                          *.inl \
                          *.md
 RECURSIVE              = YES
-EXCLUDE                = "${CMAKE_SOURCE_DIR}/File/zlib"
+EXCLUDE                = ${Docs_SourceExclude}
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = Test
-EXCLUDE_SYMBOLS        = SK_INLINE \
-                         __forceinline \
-                         getLink \
-                         hasLink \
-                         setLink \
-                         addRef \
-                         getReferences \
-                         ftMaxAllocSize \
-                         lock \
-                         isLocked \
-                         MaxSwapSpace \
-                         BlankChunk \
-                         skHash \
-                         serialize \
-                         isValidWriteData \
-                         initializeTables \
-                         initializeMemory \
-                         logUnresolvedStructure \
-                         ftBuildStruct \
-                         ftBuildMember \
-                         ftTableBuilder \
-                         InvalidName \
-                         InvalidType \
-                         ~ftTable()
-                         
+EXCLUDE_SYMBOLS        = ${Docs_SymbolExclude}
 EXAMPLE_PATH           = "${CMAKE_CURRENT_SOURCE_DIR}/Source/Images"
 EXAMPLE_PATTERNS       = *.cpp \
                          *.h \
@@ -328,11 +303,11 @@ PERL_PATH              = /usr/bin/perl
 #---------------------------------------------------------------------------
 # Configuration options related to the dot tool
 #---------------------------------------------------------------------------
-CLASS_DIAGRAMS         = YES
+CLASS_DIAGRAMS         = ${Docs_GenGraphs}
 MSCGEN_PATH            = 
 DIA_PATH               = 
 HIDE_UNDOC_RELATIONS   = NO
-HAVE_DOT               = NO
+HAVE_DOT               = ${Docs_GenGraphsDot}
 DOT_NUM_THREADS        = 5
 DOT_FONTNAME           = 
 DOT_FONTSIZE           = 10
@@ -345,10 +320,10 @@ UML_LIMIT_NUM_FIELDS   = 10
 TEMPLATE_RELATIONS     = NO
 INCLUDE_GRAPH          = NO
 INCLUDED_BY_GRAPH      = NO
-CALL_GRAPH             = YES
+CALL_GRAPH             = NO
 CALLER_GRAPH           = NO
 GRAPHICAL_HIERARCHY    = YES
-DIRECTORY_GRAPH        = NO
+DIRECTORY_GRAPH        = YES
 DOT_IMAGE_FORMAT       = svg
 INTERACTIVE_SVG        = YES
 DOT_PATH               = 
