--- a/Doxyfile.txt.in
+++ b/Doxyfile.txt.in
@@ -62,8 +62,8 @@ LOOKUP_CACHE_SIZE      = 0
 # Build related configuration options
 #---------------------------------------------------------------------------
 EXTRACT_ALL            = YES
-EXTRACT_PRIVATE        = NO
-EXTRACT_PACKAGE        = NO
+EXTRACT_PRIVATE        = YES
+EXTRACT_PACKAGE        = YES
 EXTRACT_STATIC         = YES
 EXTRACT_LOCAL_CLASSES  = YES
 EXTRACT_LOCAL_METHODS  = YES
@@ -71,8 +71,8 @@ EXTRACT_ANON_NSPACES   = YES
 HIDE_UNDOC_MEMBERS     = YES
 HIDE_UNDOC_CLASSES     = YES
 HIDE_FRIEND_COMPOUNDS  = YES
-HIDE_IN_BODY_DOCS      = YES
-INTERNAL_DOCS          = NO
+HIDE_IN_BODY_DOCS      = NO
+INTERNAL_DOCS          = YES
 CASE_SENSE_NAMES       = NO
 HIDE_SCOPE_NAMES       = NO
 HIDE_COMPOUND_REFERENCE= NO
@@ -144,7 +144,7 @@ STRIP_CODE_COMMENTS    = NO
 REFERENCED_BY_RELATION = NO
 REFERENCES_RELATION    = NO
 REFERENCES_LINK_SOURCE = NO
-SOURCE_TOOLTIPS        = YES
+SOURCE_TOOLTIPS        = NO
 USE_HTAGS              = NO
 VERBATIM_HEADERS       = NO
 CLANG_ASSISTED_PARSING = NO
