--- a/Doxyfile.txt.in
+++ b/Doxyfile.txt.in
@@ -68,8 +68,8 @@ EXTRACT_STATIC         = YES
 EXTRACT_LOCAL_CLASSES  = YES
 EXTRACT_LOCAL_METHODS  = YES
 EXTRACT_ANON_NSPACES   = YES
-HIDE_UNDOC_MEMBERS     = YES
-HIDE_UNDOC_CLASSES     = YES
+HIDE_UNDOC_MEMBERS     = NO
+HIDE_UNDOC_CLASSES     = NO
 HIDE_FRIEND_COMPOUNDS  = YES
 HIDE_IN_BODY_DOCS      = NO
 INTERNAL_DOCS          = YES
@@ -203,7 +203,7 @@ TREEVIEW_WIDTH         = 250
 EXT_LINKS_IN_WINDOW    = NO
 FORMULA_FONTSIZE       = 10
 FORMULA_TRANSPARENT    = YES
-USE_MATHJAX            = NO
+USE_MATHJAX            = YES
 MATHJAX_FORMAT         = HTML-CSS
 MATHJAX_RELPATH        = http://cdn.mathjax.org/mathjax/latest
 MATHJAX_EXTENSIONS     = 
@@ -307,7 +307,7 @@ CLASS_DIAGRAMS         = ${Docs_GenGraphs}
 MSCGEN_PATH            = 
 DIA_PATH               = 
 HIDE_UNDOC_RELATIONS   = NO
-HAVE_DOT               = ${Docs_GenGraphsDot}
+HAVE_DOT               = NO #${Docs_GenGraphsDot}
 DOT_NUM_THREADS        = 5
 DOT_FONTNAME           = 
 DOT_FONTSIZE           = 10
