--- a/Doxyfile.txt.in
+++ b/Doxyfile.txt.in
@@ -307,8 +307,8 @@ CLASS_DIAGRAMS         = ${Docs_GenGraphs}
 MSCGEN_PATH            = 
 DIA_PATH               = 
 HIDE_UNDOC_RELATIONS   = NO
-HAVE_DOT               = NO #${Docs_GenGraphsDot}
-DOT_NUM_THREADS        = 5
+HAVE_DOT               = ${Docs_GenGraphsDot}
+DOT_NUM_THREADS        = 8
 DOT_FONTNAME           = 
 DOT_FONTSIZE           = 10
 DOT_FONTPATH           = 
